ui/deploy/env/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: APP_NAME
  namespace: PROJECT_NAME
spec:
  ports:
    - port: 80
  selector:
    app: APP_NAME
